--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,89 +1,159 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-
-@layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-
-    --radius: 0.5rem;
-  }
-
-  .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 40% 98%;
-
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
-  }
+#add-new-product-form,
+#product_details,
+#home,
+#cart-row {
+	padding: 2% 5%;
 }
 
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
-  }
+.navbar {
+	padding: 1% 5%;
 }
 
-.container {
-  display: flex;
-  justify-content: space-between;
-  gap: 20px;
+.search {
+	width: 300px;
+}
+
+.form-signin {
+	width: 100%;
+	max-width: 330px;
+	padding: 100px 15px;
+	margin: auto;
+	text-align: center;
+}
+
+.form-signin .checkbox {
+	font-weight: 400;
+}
+
+.form-signin .form-floating:focus-within {
+	z-index: 2;
+}
+
+.form-signin input[type='email'] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.form-signin input[type='password'] {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.form-signup {
+	width: 100%;
+	max-width: 330px;
+	padding: 100px 15px;
+	margin: auto;
+	text-align: center;
+}
+
+.form-signup .form-floating:focus-within {
+	z-index: 2;
+}
+
+.form-signup input[type='firstname'] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+.form-signup input[type='lastname'] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.form-signup input[type='signup_email'] {
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
+}
+
+.form-signup input[type='signup_password'] {
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
+}
+
+.grid-container {
+	display: grid;
+	grid-template-areas: 'main';
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
+	height: 100%;
+}
+main {
+	grid-area: main;
+	padding: 1rem;
+	background-color: lightgray;
+}
+
+.row {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 .card {
-  text-overflow: ellipsis;
+	border: 0.1rem white solid;
+	background-color: white;
+	border-radius: 0.5rem;
+	margin: 0.2rem;
+}
+.card-body {
+	padding: 0.5rem;
+	margin-bottom: 0.2rem;
+}
 
-  height: 300px;
+a {
+	text-decoration: none;
+	color: black;
+}
+a:hover {
+	color: orangered;
+}
+
+img {
+	border-radius: 0.5rem;
+	max-width: 29rem;
+	width: 100%;
+}
+.cart {
+	padding: 0 30%;
+}
+
+.right-align {
+	position: relative;
+	float: right;
+}
+
+.spinner {
+	text-align: center;
+}
+
+body {
+	background: #eee;
+}
+.card {
+	box-shadow: 0 20px 27px 0 rgb(0 0 0 / 5%);
+}
+.card {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	min-width: 0;
+	word-wrap: break-word;
+	background-color: #fff;
+	background-clip: border-box;
+	border: 0 solid rgba(0, 0, 0, 0.125);
+	border-radius: 1rem;
+}
+.text-reset {
+	--bs-text-opacity: 1;
+	color: inherit !important;
+}
+a {
+	color: #5465ff;
+	text-decoration: none;
 }
